--- a/Sama/src/css/bannerPIC.css
+++ b/Sama/src/css/bannerPIC.css
@@ -27,9 +27,9 @@
     text-align: center;
     width: 100%; }
     .banner .banner_trig li {
-      background: #f65;
+      background: #fff;
       padding: 8px 20px;
-      margin-right: 1px;
+      margin-right: 2px;
       display: inline-block;
       cursor: pointer;
       vertical-align: middle; }
@@ -38,4 +38,5 @@
         max-width: 96px;
         height: 18px;
         color: #333;
-        overflow: hidden; }
+        overflow: hidden;
+        font-size: 12px; }
