--- a/Sama/src/css/main_wrap.css
+++ b/Sama/src/css/main_wrap.css
@@ -109,6 +109,13 @@
     position: relative;
     width: 100%;
     padding-top: 100%; }
+    .my_shopping_list .prod_box .item .i_size_box .jsd_tag {
+      position: absolute;
+      left: 0px;
+      top: 12px;
+      width: 56px;
+      height: 22px;
+      background: url(../img/icon_jsd.png); }
   .my_shopping_list .prod_box .item img {
     position: absolute;
     left: 0px;
@@ -125,13 +132,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap; }
-    .my_shopping_list .prod_box .item p .jsd_tag {
-      position: absolute;
-      left: 0px;
-      top: 12px;
-      width: 56px;
-      height: 22px;
-      background: url(../img/icon_jsd.png); }
   .my_shopping_list .prod_box .item .is_tags_mark {
     box-sizing: border-box;
     width: 100%;
