--- a/Sama/src/css/bannerPIC.css
+++ b/Sama/src/css/bannerPIC.css
@@ -6,8 +6,11 @@
   .banner .banner_pic {
     width: 100%;
     position: absolute;
-    z-index: 10; }
+    z-index: 0;
+    background: #C77A37;
+    height: 400px; }
     .banner .banner_pic li {
+      opacity: 0;
       height: 400px;
       width: 100%;
       overflow: hidden;
@@ -27,7 +30,7 @@
     text-align: center;
     width: 100%; }
     .banner .banner_trig li {
-      background: #fff;
+      background-color: #fff;
       padding: 8px 20px;
       margin-right: 2px;
       display: inline-block;
@@ -40,3 +43,7 @@
         color: #333;
         overflow: hidden;
         font-size: 12px; }
+
+/* .banner_trig li:nth-of-type(1){
+	background-color:#1E73B9;
+} */
