--- a/Sama/src/css/login.css
+++ b/Sama/src/css/login.css
@@ -122,19 +122,24 @@ a {
       line-height: 30px;
       color: #06c;
       font-size: 12px; }
-    .from_wrap .from_box .login {
-      display: block;
-      width: 100%;
-      height: 50px;
-      margin-top: 5px;
-      -moz-border-radius: 3px;
-      border-radius: 3px;
-      background: #006aaf;
-      text-align: center;
-      color: #fff;
-      line-height: 50px;
-      font-size: 18px;
-      font-family: "Microsoft YaHei";
-      font-weight: bold; }
-      .from_wrap .from_box .login:hover {
-        background: #005b96; }
+
+#button {
+  width: 100%;
+  display: block;
+  height: 50px;
+  margin-top: 5px;
+  border-radius: 3px;
+  background: #006aaf;
+  text-align: center;
+  color: #fff;
+  line-height: 50px;
+  font-size: 18px;
+  font-family: "Microsoft YaHei";
+  font-weight: bold; }
+  #button:hover {
+    background: #005b96; }
+
+#error {
+  height: 20px;
+  font-family: "Microsoft YaHei";
+  color: red; }
