--- a/Sama/src/scss/login.scss
+++ b/Sama/src/scss/login.scss
@@ -75,23 +75,28 @@ $bg_color:#f8f8f8;
                 color: #06c;
                 font-size:12px;
           }
-        .login{
-                display: block;
-                width: 100%;
-                height: 50px;
-                margin-top: 5px;
-                -moz-border-radius: 3px;
-                border-radius: 3px;
-                background: #006aaf;
-                text-align: center;
-                color: #fff;
-                line-height: 50px;
-                font-size: 18px;
-                font-family: "Microsoft YaHei";
-                font-weight: bold;
-                &:hover{
-                background: darken(#006aaf,5%)
-              }
-          }
       }
+}
+#button{
+    width: 100%;
+    display: block;
+    height: 50px;
+    margin-top: 5px;
+    border-radius: 3px;
+    background: #006aaf;
+    text-align: center;
+    color: #fff;
+    line-height: 50px;
+    font-size: 18px;
+    font-family: "Microsoft YaHei";
+    font-weight: bold;
+     &:hover{
+        background: darken(#006aaf,5%)
+      }
+}
+
+#error{
+  height:20px;
+  font-family: "Microsoft YaHei";
+  color:red;
 }
